[gd_scene load_steps=4 format=3 uid="uid://dwecqaiipqlbx"]

[ext_resource type="Script" uid="uid://2anklcn13t10" path="res://src/audio/audio_configuration.gd" id="1_vg5ni"]
[ext_resource type="PackedScene" uid="uid://ckheptltfq8j" path="res://src/audio/audio.tscn" id="2_l2y41"]

[sub_resource type="Theme" id="Theme_l2y41"]

[node name="AudioConfiguration" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vg5ni")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -4.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05424943, 0.26542705, 0.3191566, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(500, 400)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.28300002
anchor_top = 0.19100001
anchor_right = 0.717
anchor_bottom = 0.809
offset_left = 159.98398
offset_top = 129.732
offset_right = -159.98401
offset_bottom = -129.732
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 76
text = "Configuración de audio"

[node name="SwitchMusic" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CheckBoxMusic" type="CheckBox" parent="VBoxContainer/SwitchMusic"]
layout_mode = 2
theme = SubResource("Theme_l2y41")
button_pressed = true

[node name="Label" type="Label" parent="VBoxContainer/SwitchMusic"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Música"

[node name="SwitchSFX" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CheckBoxSFX" type="CheckBox" parent="VBoxContainer/SwitchSFX"]
layout_mode = 2
button_pressed = true

[node name="Label" type="Label" parent="VBoxContainer/SwitchSFX"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Efectos"

[node name="Volume" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Volume"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Volumen"

[node name="HSlider" type="HSlider" parent="VBoxContainer/Volume"]
custom_minimum_size = Vector2(200, 110)
layout_mode = 2
step = 0.001
value = 100.0
rounded = true
ticks_on_borders = true

[node name="Volver" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "Volver"

[node name="AudioManager" parent="." instance=ExtResource("2_l2y41")]

[connection signal="toggled" from="VBoxContainer/SwitchMusic/CheckBoxMusic" to="." method="_on_check_box_music_toggled"]
[connection signal="toggled" from="VBoxContainer/SwitchSFX/CheckBoxSFX" to="." method="_on_check_box_sfx_toggled"]
[connection signal="value_changed" from="VBoxContainer/Volume/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Volver" to="." method="_on_volver_pressed"]
